--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <script src="dustbin.js"></script>
       <script src="ground.js"></script>
       <script src="paperBall.js"></script>
+      <script src="BaseClass.js"></script>
       <script src="p5.play.js"></script>
 
       <script src="sketch.js"></script>
